<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HotPan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_settings">設定</string>
    <string name="menu_guide">教學</string>
    <string name="menu_helps">幫助</string>

    <string name="home_popular">popular</string>
    <string name="home_recommendable">recommendable</string>
    <string name="home_10steps">10 steps</string>

    <string name="front_frontPage">前台</string>
    <string name="front_backPage">後台</string>
    <string name="front_skip">跳過>></string>

    <string name="recipe_title">Recipe Name</string>
    <string name="food_category">Food category</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="dessert">Dessert</string>
    <string name="lamb">Lamb</string>
    <string name="seafood">Seafood</string>
    <string name="fish">Fish</string>
    <string name="veg">Vegetable</string>
    <string name="pork">Pork</string>

    <string name="current_temperature">Current Temperature</string>
    <string name="temperature_control">Temperature Control</string>
    <string name="current_temperature_num">40</string>
    <string name="target_temperature">Target Temperature</string>
    <string name="target_temperature_num">40</string>

    <string name="ingredients_string">Ingredients</string>
    <string name="recipe_string">Recipe</string>
    <string name="recipe_cook">Smart Cook</string>
    <string name="recipe_steps_number">0</string>

    <string name="sous_vide">Sous vide</string>
    <string name="saute">Saute</string>
    <string name="deep_fry">Deep-fry</string>

    <string name="recipe_mushroom_risotto">Risotto</string>
    <string name="recipe_mushroom_risotto_material">- olive oil or sunflower oil\n- onion\n- risotto rice\n- white wine\n- chicken stock cube\n- garlic cloves\n- cooked chicken\n- Italian-style cheese\n- butter\n- black pepper</string>
    <string name="recipe_mushroom_risotto_quantity">2 Tbsp\n1 pcs\n250 g\n100ml\n1 litre\n2 pcs\n250 g\n75 g\n25g\n</string>
    <string name="recipe_mushroom_risotto_text">Heat the oil in a large, non–stick saucepan over a medium heat. Add the onion and garlic and fry for 2–3 minutes, stirring occasionally, until softened and just beginning to colour.\nAdd the risotto rice to the pan and stir well for 30-40 seconds, until the oil has coated the grains of rice.\nPour in half of the wine and allow to bubble for 30-40 seconds, then add all of the stock and bring to the boil, stirring well. Reduce the heat and simmer, uncovered, for 8-10 minutes, stirring frequently, until the rice is almost tender and the risotto is creamy in appearance.\nStir in the remaining wine, the chicken and the frozen peas, then continue to cook, stirring constantly, for a further 4-5 minutes, or until the chicken and peas are heated through and the rice is tender with a slight bite.\nRemove the pan from the heat, then stir in the butter and cheese. Season with black pepper. Cover the pan with a lid and set aside for 5 minutes before serving.</string>

    <string name="recipe_french_scrambled_eggs">French scrambled eggs</string>
    <string name="recipe_french_scrambled_eggs_material">- large eggs\n- unsalted butter\n- whole milk or heavy cream\n- chopped chives\n- country bread, toasted</string>
    <string name="recipe_french_scrambled_eggs_quantity">3 pcs\n1 Tbsp\n3 Tbsp\n1 Tbsp\n2 slices</string>
    <string name="recipe_french_scrambled_eggs_text">In a small bowl, lightly beat the eggs\nHeat butter in a small saucepan over medium heat until foamy\nAdd eggs and cook, whisking, until they begin to set\ngently whisk in milk and chives\nRemove from heat and serve with toasted bread.</string>

    <string name="recipe_braised_pork_belly">Braised Pork Belly</string>
    <string name="recipe_braised_pork_belly_material">- skin-on, pork belly\n- Shaoxing wine\n- pale green parts of scallions\n- sliced ginger\n- light soy sauce\n- garlic cloves</string>
    <string name="recipe_braised_pork_belly_quantity">280 g\n40 ml\n4 pcs\n12 pcs\n40 ml\n2 cloves</string>
    <string name="recipe_braised_pork_belly_text">Bring a large pot of water to a boil\nAdd pork and cook, skimming off foam from surface, 5 minutes\nTransfer pork to paper towels to drain\nWipe out pot\nHeat 3 Tbsp\nWater in pot over medium-high\nAdd sugar, stir to dissolve, and cook, stirring constantly, until syrup thickens and turns a pale amber color, about 4 minutes\nReduce heat to medium and return pork to pot, swirling so all sides are covered in caramel\nAdd pale green parts of scallions, ginger, garlic, and star anise\nCook, tossing, until fragrant, about 1 minute\nAdd soy sauce and wine and cook, stirring, until slightly reduced, about 1 minute\nPour in water (just barely cover pork)\nBring to a boil\nReduce heat to low (cook 50–60 minutes)\ntransfer pork to a plate, remove pot from heat\nLet sauce cooking liquid cool slightly so rendered fat can rise to the surface\nSkim off as much fat as possible (save it for another use)\nReturn pot to medium heat and cook, stirring occasionally, until sauce is slightly thickened and glossy, 12–15 minutes\nReturn pork to pot and toss to gently reheat and coat with sauce\nTransfer pork to a platter. Pour sauce over.
    </string>

    <string name="recipe_honey_orange_roast_sea_bass">Honey &amp; orange roast sea bass with lentils</string>
    <string name="recipe_smoked_fish_pies">Smoked trout fish pies</string>
    <string name="recipe_roast_salmon">Roast salmon with pesto sauce &amp; beetroot slaw</string>
    <string name="recipe_smoke_hake_beans">Smoky hake, beans &amp; greens</string>
    <string name="recipe_fennel_herb_barbecued_fish">Fennel and herb barbecued fish</string>
    <string name="recipe_fish_curry">Fish curry</string>
    <string name="recipe_sauteed_fish_platter">Simple Sautéed Fish with Garlic</string>
    <string name="recipe_onion_fried_fish">Softened sweet onion and crisp fried fish</string>

    <string name="get_full_device">%s\n%s</string>
    <string name="get_recipe_time">%d min</string>
    <string name="get_recipe_steps">%d steps</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
