<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/baseline_home_white_18"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/baseline_settings_white_18"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_guide"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/baseline_menu_book_white_18"
            android:title="@string/menu_guide" />
        <item
            android:id="@+id/nav_helps"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_helps" />
    </group>
</menu>
