<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/imageViewPager_Step"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foregroundGravity="center"
        android:layout_centerInParent="true"
        android:overScrollMode="never"
        android:clipToPadding="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPager"
        app:layout_constraintVertical_bias="0.2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/image_shape"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/shape"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/beef"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/image_chicken"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/path"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/chicken"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="@+id/image_shape"
                app:layout_constraintStart_toStartOf="@+id/image_shape"
                app:layout_constraintTop_toBottomOf="@+id/image_shape" />

            <Button
                android:id="@+id/image_crab"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/icon_crab_line"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/seafood"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="@+id/image_shape"
                app:layout_constraintStart_toStartOf="@+id/image_shape"
                app:layout_constraintTop_toBottomOf="@+id/image_chicken" />

            <Button
                android:id="@+id/image_leaf"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/leaf"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/veg"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="@+id/image_shape"
                app:layout_constraintStart_toStartOf="@+id/image_shape"
                app:layout_constraintTop_toBottomOf="@+id/image_crab" />

            <Button
                android:id="@+id/image_pig"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/pig"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/pork"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_shape"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/imagefish"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/fish"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/fish"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="@+id/image_pig"
                app:layout_constraintStart_toStartOf="@+id/image_pig"
                app:layout_constraintTop_toBottomOf="@+id/image_pig" />

            <Button
                android:id="@+id/image_goat"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/goat"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/lamb"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="@+id/image_pig"
                app:layout_constraintStart_toStartOf="@+id/image_pig"
                app:layout_constraintTop_toBottomOf="@+id/imagefish" />

            <Button
                android:id="@+id/image_cake"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:drawableStart="@mipmap/cake"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:text="@string/dessert"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkOrange"
                app:layout_constraintEnd_toEndOf="@+id/image_pig"
                app:layout_constraintStart_toStartOf="@+id/image_pig"
                app:layout_constraintTop_toBottomOf="@+id/image_goat" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>