<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.RecipeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_constrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_constrain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/recipe_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/recipe_fill"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_img"
                app:layout_constraintEnd_toEndOf="@+id/recipe_img"
                app:layout_constraintStart_toStartOf="@+id/recipe_img"
                app:layout_constraintTop_toTopOf="@+id/recipe_img"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/recipe_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/heart"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_img"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="16dp"
                android:text="@string/recipe_french_scrambled_eggs"
                android:textColor="@color/colorWhiteGray"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/recipe_img"
                app:layout_constraintStart_toStartOf="@+id/recipe_img"
                app:layout_constraintTop_toBottomOf="@+id/recipe_img"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#979797"
                app:layout_constraintBottom_toTopOf="@+id/ingredients"
                app:layout_constraintEnd_toEndOf="@+id/recipe_quantity"
                app:layout_constraintStart_toStartOf="@+id/recipe_material"
                app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="36dp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="8dp"
                android:text="@string/ingredients_string"
                android:textColor="@color/colorWhiteGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recipe_title"
                app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

            <TextView
                android:id="@+id/recipe_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:padding="8dp"
                android:text="@string/recipe_french_scrambled_eggs_material"
                android:textColor="@color/colorWhiteGray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/ingredients"
                app:layout_constraintTop_toBottomOf="@+id/ingredients" />

            <TextView
                android:id="@+id/recipe_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:padding="8dp"
                android:text="@string/recipe_french_scrambled_eggs_quantity"
                android:textColor="@color/colorWhiteGray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_material"
                app:layout_constraintEnd_toEndOf="@+id/recipe_title"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/recipe_material"
                app:layout_constraintTop_toTopOf="@+id/recipe_material" />

            <TextView
                android:id="@+id/recipe_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="8dp"
                android:text="@string/recipe_string"
                android:textColor="@color/colorWhiteGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recipe_material"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_baseline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_recycle_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="@+id/recipe_title"
                app:layout_constraintStart_toStartOf="@+id/recipe_string"
                app:layout_constraintTop_toBottomOf="@+id/recipe_string" />

            <TextView
                android:id="@+id/recipe_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:padding="16dp"
                android:textColor="@color/colorWhiteGray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/recipe_title"
                app:layout_constraintStart_toStartOf="@+id/recipe_string"
                app:layout_constraintTop_toBottomOf="@+id/recipe_string" />


            <TextView
                android:id="@+id/ingredient_baseline"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="26dp"
                android:background="#979797"
                app:layout_constraintEnd_toEndOf="@+id/recipe_quantity"
                app:layout_constraintStart_toStartOf="@+id/recipe_material"
                app:layout_constraintTop_toBottomOf="@+id/recipe_material" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_constrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/recipe_btn"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_bg2"
            android:gravity="center_vertical|center_horizontal"
            android:paddingStart="14dp"
            android:paddingTop="0dp"
            android:paddingEnd="14dp"
            android:text="@string/recipe_cook"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>